  [31965] rseq extension mechanism does not work as intended
  [31968] mremap implementation in C does not handle arguments correctly
  [32052] Name space violation in fortify wrappers
  [32137] libio: Attempt wide backup free only for non-legacy code
  [32470] x86: Avoid integer truncation with large cache sizes
  [32582] Fix underallocation of abort_msg_s struct (CVE-2025-0395)

Security related changes:

  CVE-2023-4806: When an NSS plugin only implements the
  _gethostbyname2_r and _getcanonname_r callbacks, getaddrinfo could use
  memory that was freed during buffer resizing, potentially causing a
  crash or read or write to arbitrary memory.

  CVE-2023-5156: The fix for CVE-2023-4806 introduced a memory leak when
  an application calls getaddrinfo for AF_INET6 with AI_CANONNAME,
  AI_ALL and AI_V4MAPPED flags set.

  CVE-2023-4911: If a tunable of the form NAME=NAME=VAL is passed in the
  environment of a setuid program and NAME is valid, it may result in a
  buffer overflow, which could be exploited to achieve escalated
  privileges.  This flaw was introduced in glibc 2.34.

  CVE-2025-0395: When the assert() function fails, it does not allocate
  enough space for the assertion failure message string and size
  information, which may lead to a buffer overflow if the message string
  size aligns to page size.

Version 2.35

Major new features:

* Unicode 14.0.0 Support: Character encoding, character type info, and
  transliteration tables are all updated to Unicode 14.0.0, using
  generator scripts contributed by Mike FABIAN (Red Hat).

* Bump r_version in the debugger interface to 2 and add a new field,
  r_next, support multiple namespaces.

* Support for the C.UTF-8 locale has been added to glibc.  The locale
  supports full code-point sorting for all valid Unicode code points.  A
  limitation in the framework for fnmatch, regexec, and regcomp requires
  a compromise to save space and only ASCII-based range expressions are